--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "expo-stripe-gl",
+    "description": "A version of the Stripe homepage animated gradient that works on Expo",
     "version": "1.0.0",
     "main": "node_modules/expo/AppEntry.js",
     "scripts": {
@@ -11,17 +12,15 @@
     "dependencies": {
         "expo": "~47.0.9",
         "expo-gl": "~12.0.1",
-        "expo-status-bar": "~1.4.2",
-        "nativewind": "^2.0.11",
         "react": "18.1.0",
         "react-dom": "18.1.0",
-        "react-native": "0.70.5",
-        "react-native-web": "~0.18.9"
+        "react-native": "0.70.5"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
         "@types/react": "~18.0.14",
         "@types/react-native": "~0.70.6",
+        "nativewind": "^2.0.11",
         "tailwindcss": "^3.2.4",
         "typescript": "^4.6.3"
     },
